--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "EA-NodeJS-Template",
+  "name": "Spectral_Adapter",
   "version": "0.1.0",
   "author": "",
   "description": "",
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/.bin/_mocha -r ts-node/register --timeout 0 --extension ts",
+    "test": "jest",
     "start": "node dist/app.js",
     "dev": "node -r ts-node/register app.ts",
     "build": "tsc",
@@ -17,14 +17,12 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.77",
-    "@types/chai": "^4.2.18",
     "@types/express": "^4.17.12",
-    "@types/mocha": "^8.2.2",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.12.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^14.1.1",
@@ -34,7 +32,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "express": "^4.17.0",
-    "mocha": "^7.1.2",
+    "jest": "^27.0.4",
     "prettier": "^2.3.1",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
